--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -11,7 +11,11 @@
 
   <h1>Dette er velkomstsiden</h1>
 
-  <a href="/Side3/HTML/Oblig1.html">Oblig1</a>
+  <div class="Restaurant-info">
+    <a href="/Side3/HTML/Oblig1.html">Oblig1</a>
+  </div>
+
+
   
 </body>
 </html>
