--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -17,8 +17,8 @@
         
         <div class="navbar">
           <a href="index.html">Velkommen</a>
-            <a href="fil.html">Booking</a>
-            <a href="Oblig1.html">Cafe</a>
+            <a href="Booking.html">Booking</a>
+            <a href="Meny.html">Cafe</a>
             <a href="">Topical page</a>
             <a href="">Accessibility page</a>
         </div>
