--- a/Side2/HTML/fil.html
+++ b/Side2/HTML/fil.html
@@ -9,15 +9,22 @@
 </head>
 <body>
     <header>
-        <H1>Eksamen</H1>
-        <div class="navbar">
-            <a href="">Velkommen</a>
-            <a href="/Side2/HTML/fil.html">Booking</a>
-            <a href="/Side3/HTML/Meny.html">Meny</a>
-            <a href="">Topical page</a>
-            <a href="">Accessibility page</a>
-        </div>
+        <div class="Header-Image">
+            <div class="Main-Title">
+              <h1>
+               Booking
+              </h1>
+            </div>
+          </div>
     </header>
+
+    <div class="navbar">
+        <a href="/Side1/HTML/index.html">Velkommen</a>
+        <a href="/Side2/HTML/fil.html">Booking</a>
+        <a href="/Side3/HTML/Meny.html">Meny</a>
+        <a href="/Side4/HTML/fil.html">Topical page</a>
+        <a href="/Side5/HTML/fil.html">Accessibility page</a>
+    </div>
    
     <div class="grid">
         <div><img src="restaurant.jpg" alt="restaurant"></div>
