--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -10,32 +10,40 @@
 <body>
   
   <header>
-    <h1>Testing av kode</h1>
+
+    <div class="Header-Image">
+      <div class="Tittel">
+        <h1>
+          Testing av kode
+        </h1>
+      </div>
+    </div>
+
   </header>
 
-  <div class="Navbar">
+  <div class="navbar">
     <ul>
-      <li> <a id="Øvre-Link" href="/Side1/HTML/index.html">Velkommen</a> </li>
+      <li> <a href="/Side1/HTML/index.html">Velkommen</a> </li>
       <li> <a href="/Side2/HTML/fil.html">Booking</a> </li>
-      <li> <a href="/Side3/HTML/Oblig1.html">Restaurant</a> </li>
+      <li> <a href="/Side3/HTML/Meny.html">Restaurant</a> </li>
       <li> <a href="/Side4/HTML/fil.html">Topical Page</a> </li>
       <li> <a href="/Side5/HTML/fil.html">Accessibility Page</a> </li>
     </ul>
   </div>
 
-  <div class="Innhold">
+<div class="grid-container">
+  <div class=grid1>
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image1" alt="Testing">
+  </div>
+  <div class="grid2">
     <h2>Hvordan vi testet koden</h2>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam enim corrupti laborum labore cum expedita distinctio ipsam eveniet nostrum. 
       Consequatur, minus at! Porro quod est id doloribus pariatur magnam tempora!</p>
   </div>
-
-  <div>
-    <img src="/Side5/Images/test Liten.jpeg" alt="Testing">
+  <div class="grid3">
+    <img src="/Side5/Images/test Liten.jpeg" class="Testing-image2" alt="Testing2">
   </div>
-
-  <div>
-    <img src="/Side5/Images/test Liten.jpeg" alt="Testing2">
-  </div>
+</div>
 
   <footer>
     <p>
