--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -24,7 +24,7 @@
   <div class="navbar">
     <ul>
       <li> <a href="/Side1/HTML/index.html">Velkommen</a> </li>
-      <li> <a href="/Side2/HTML/fil.html">Booking</a> </li>
+      <li> <a href="/Side2/HTML/Booking.html">Booking</a> </li>
       <li> <a href="/Side3/HTML/Meny.html">Restaurant</a> </li>
       <li> <a href="/Side4/HTML/fil.html">Topical Page</a> </li>
       <li> <a href="/Side5/HTML/fil.html">Accessibility Page</a> </li>
