--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -23,7 +23,7 @@
 
     <div class="navbar">
         <a href="/Side1/HTML/index.html">Velkommen</a>
-        <a href="/Side2/HTML/fil.html">Booking</a>
+        <a href="/Side2/HTML/Booking.html">Booking</a>
         <a href="/Side3/HTML/Meny.html">Meny</a>
         <a href="/Side4/HTML/fil.html">Topical page</a>
         <a href="/Side5/HTML/fil.html">Accessibility page</a>
