--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -25,20 +25,18 @@
           <ul>
             <li> <a href="/Side1/HTML/index.html">Velkommen</a> </li>
             <li> <a href="/Side2/HTML/Booking.html">Booking</a> </li>
-            <li> <a href="/Side3/HTML/Meny.html">Restaurant</a> </li>
+            <li> <div class="dropdown">
+              <button class="dropbtn">Restaurant</button>
+              <div class="dropdown-content">
+                <a href="#Meny">Meny</a>
+                <a href="/Side3/HTML/Åpningstider.html">Åpningstider</a>
+                <a href="#kontaktinfo">Kontaktinfo</a>
+              </div> </li>
             <li> <a href="/Side4/HTML/fil.html">Topical Page</a> </li>
             <li> <a href="/Side5/HTML/fil.html">Accessibility Page</a> </li>  
           </ul>
 
         </div>
-
-        <div class="dropdown">
-          <button class="dropbtn">Restaurant ______________</button>
-          <div class="dropdown-content">
-            <a href="#Meny">Meny</a>
-            <a href="/Side3/HTML/Åpningstider.html">Åpningstider</a>
-            <a href="#kontaktinfo">Kontaktinfo</a>
-          </div>
 
 <div class="grid">
 
