--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -22,8 +22,8 @@
     <div class="Navbar">
       <ul>
         <li><a href="/Side1/HTML/index.html">Velkommen</a></li>
-        <li><a href="/Side2/HTML/fil.html">Booking</a></li>
-        <li><a href="/Side3/HTML/Oblig1.html">Restaurant</a></li>
+        <li><a href="/Side2/HTML/Booking.html">Booking</a></li>
+        <li><a href="/Side3/HTML/Meny.html">Restaurant</a></li>
         <li><a href="/Side4/HTML/fil.html">Topical page</a></li>
         <li><a href="/Side5/HTML/fil.html">Accessibility page</a></li>
       </ul>
