--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -128,7 +128,7 @@
   <footer>
   <div class="footer">
     <p id="kontaktinfo"> <b>Kontaktinfo</b><br>
-       E-post: restaurant@obligatorisk.no <br>
+    <a href="restaurant@obligatorisk.no">E-post: restaurant@obligatorisk.no</a> <br>
        Telefon: 12 34 56 78<br>
        Adresse: Restaurantveien 48 0284 Oslo
     </p>
