--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -78,7 +78,7 @@
                 får den siste invitasjonen. 
                 <br>
                 <br> 
-                <a href="/Side2/HTML/fil.html">Book her</a>
+                <a href="/Side2/HTML/Booking.html">Book her</a>
               </p>
           </div>
         </div>
@@ -90,7 +90,7 @@
               aperiam delectus non mollitia exercitationem? Officia deleniti nesciunt, praesentium quas dolore accusantium error labore magnam? 
               <br>
               <br>
-              <a href="/Side2/HTML/fil.html">Book her</a>
+              <a href="/Side2/HTML/Booking.html">Book her</a>
             </p>
           </div>
           <div class="Fest-Bilde">
@@ -107,7 +107,7 @@
                 facere voluptates enim reprehenderit deserunt eaque optio quam saepe quae ipsa magnam sit nesciunt odit! Necessitatibus, nobis eveniet! 
                 <br>
                 <br>
-                <a href="/Side2/HTML/fil.html">Book her</a>
+                <a href="/Side2/HTML/Booking.html">Book her</a>
               </p>
           </div>
         </div>
