--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -46,7 +46,7 @@
 
     <div class="kolonne1">
         <div class="salat">
-        <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="">
+        <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="Fotograf">
         </div>
         <div class="pizza">
         <img  src="/Side3/Images/Margherita-bredde-1200x750.jpg" alt="">
