--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Forside</title>
   <link rel="stylesheet" href="/Side1/CSS/fil.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
@@ -86,8 +86,8 @@
         <div class="Fest">
   
           <div class="Fest-Info">
-            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab molestias rem explicabo tempora perferendis libero 
-              aperiam delectus non mollitia exercitationem? Officia deleniti nesciunt, praesentium quas dolore accusantium error labore magnam? 
+            <p> Vi tilbyr også muligheten for å leie lokalene for å holde fester til andre anledninger. Enten det er bestefars 70-årsslag eller 
+              en i vennegruppa som ønsker å arrangere en sammenkomst, men som ikke har plass i eget hjem, så finnes løsningen hos oss. 
               <br>
               <br>
               <a href="/Side2/HTML/Booking.html">Book her</a>
@@ -103,8 +103,8 @@
             <img src="/Side1/Images/test.jpeg" class="test5" alt="test-picture5">
           </div>
           <div class="Konfirmasjons-Info">
-              <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde iusto, voluptas libero 
-                facere voluptates enim reprehenderit deserunt eaque optio quam saepe quae ipsa magnam sit nesciunt odit! Necessitatibus, nobis eveniet! 
+              <p> Det er en konfirmant i hus! Da kreves det en feiring av større dimensjoner. Konfirmanten kan samle både familie og venner i våre lokaler 
+                for å sende han eller henne inn i de voksenes verden med mat, drikke og selvfølgelig kake! 
                 <br>
                 <br>
                 <a href="/Side2/HTML/Booking.html">Book her</a>
@@ -123,8 +123,8 @@
         
         <div class="Links">
           <a href="/Side1/HTML/index.html">Forside</a>
-          <a href="/Side3/HTML/Oblig1.html">Restaurant</a>
-          <a href="/Side2/HTML/fil.html">Booking</a>
+          <a href="/Side3/HTML/Meny.html">Restaurant</a>
+          <a href="/Side2/HTML/Booking.html">Booking</a>
         </div>
 
         <div class="Socials">
