--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Topical Page</title>
   <link rel="stylesheet" href="/Side4/CSS/fil.css">
 </head>
 <body>
@@ -40,11 +40,11 @@
 Fake news og manipulering av valg er eksempel på hvordan det kan ha politiske konsekvenser. Det er i dag utviklet algoritmer og systemer som gjør det lettere for folk å havne lenger og lenger inn i en nisje. 
 For eksempel det som kalles ekkokammer blir mulig i ulike forum og grupper på internett. Du finner mer og mer av det du interesserer deg for. Det er da lettere å bli misinformert, om du ikke er kildekritisk, 
 som blir vanskeligere og vanskeligere. Om du googler: “Er jorden flat?» vil du få alle mulige svar, og du er nødt til å være svært kildekritisk. På denne måten skapes blant annet moderne kulter eller 
-konspirasjonsteoretikere som “antivaxers”. Selv om du tviler, så får du opp mer og mer av de samme meningene pga algoritmer. Du finner en bekreftelse på egen mening, som deretter fører til mer og mer ekstreme meninger. Dette kan også skje med politiske meninger. Slik som i USA og stormingen av kongressen, hvor samfunnet hadde blitt veldig polarisert. Man blir fjernet fra virkeligheten og de tenker at den eneste måten er å overta landet.
+konspirasjonsteoretikere som <a href="https://www.medicalnewstoday.com/articles/anti-vaxxer" target="_blank">“anti-vaxxers”</a>. Selv om du tviler, så får du opp mer og mer av de samme meningene pga algoritmer. Du finner en bekreftelse på egen mening, som deretter fører til mer og mer ekstreme meninger. Dette kan også skje med politiske meninger. Slik som i USA og stormingen av kongressen, hvor samfunnet hadde blitt veldig polarisert. Man blir fjernet fra virkeligheten og de tenker at den eneste måten er å overta landet.
 <br>
 <br>
 Større aktører driver også med bevisst manipulering. Som for eksempel astroturfing, der politiske organisasjoner lager falske brukere og sniker seg inn i samtaler på nett for å endre meningene til folk, ofte på nettsider som Reddit eller Twitter. 
-Et eksempel på dette er under 2016 valget i USA da flere russiske organisasjoner sine folk utga seg for å være amerikanere, og gikk inn i samtaler for å rette folk mot hverandre og polarisere folket. I Internasjonale konflikter brukes også denne metoden 
+Et eksempel på dette er under 2016 valget i USA, <a href="https://time.com/5565991/russia-influence-2016-election/">da flere russiske organisasjoner sine folk utga seg for å være amerikanere, og gikk inn i samtaler for å rette folk mot hverandre og polarisere folket</a>. I Internasjonale konflikter brukes også denne metoden 
 i form av propaganda. For eksempel russiske bots på Twitter, hvor intensjonen er å spre desinformasjon om invasjonen av Ukraina. Slike bots brukes også for å bidra til å skape større polarisering mellom de politiske motpartene i andre land. Dermed kan 
 stater ha politisk innflytelse innenfor andre landegrenser.
 
@@ -52,7 +52,7 @@ stater ha politisk innflytelse innenfor andre landegrenser.
         </div>
 
         <div class="grid2">
-          <img src="/Side1/Images/test.jpeg" class="grid-img1" alt="grid1_img">
+          <img src="/Side4/Images/Anti-vax.avif" class="grid-img1" alt="A demonstrator at the ‘No Mandatory Flu Shot Massachusetts’ rally in Boston last month © Boston Globe via Getty Images">
         </div>
         
         <div class="grid3">
