--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -44,9 +44,10 @@
         <h2>Vår Meny</h2>
     </div>
 
-    <div class="kolonne1">
+    <div class="kolonne1"> 
+      <div class="fotograf">fotograf</div>
         <div class="salat">
-        <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="Fotograf">
+        <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="">
         </div>
         <div class="pizza">
         <img  src="/Side3/Images/Margherita-bredde-1200x750.jpg" alt="">
