--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -124,11 +124,19 @@
 </div>
 
   <footer>
+
+    <div class="Links">
+          
+      <a href="/Side1/HTML/index.html">Forside</a>
+      <a href="/Side3/HTML/Meny.html">Restaurant</a>
+      <a href="/Side2/HTML/Booking.html">Booking</a>
+    </div>
+
   <div class="footer">
     <p id="kontaktinfo"> <b>Kontaktinfo</b><br>
-    <a href="mailto:restaurant@obligatorisk.no">E-post: restaurant@obligatorisk.no</a> <br>
+    <a href="mailto:vassjoselskapslokaler@gmail.no">E-post: vassjoselskapslokaler@gmail.no</a> <br>
        Telefon: 12 34 56 78<br>
-       Adresse: Restaurantveien 48 0284 Oslo
+       Adresse: Grindvollgata 556, 2720 Grindvoll
     </p>
   </div>
   </footer>
