--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -44,7 +44,7 @@ konspirasjonsteoretikere som <a href="https://www.medicalnewstoday.com/articles/
 <br>
 <br>
 Større aktører driver også med bevisst manipulering. Som for eksempel astroturfing, der politiske organisasjoner lager falske brukere og sniker seg inn i samtaler på nett for å endre meningene til folk, ofte på nettsider som Reddit eller Twitter. 
-Et eksempel på dette er under 2016 valget i USA, <a href="https://time.com/5565991/russia-influence-2016-election/">da flere russiske organisasjoner sine folk utga seg for å være amerikanere, og gikk inn i samtaler for å rette folk mot hverandre og polarisere folket</a>. I Internasjonale konflikter brukes også denne metoden 
+Et eksempel på dette er under 2016 valget i USA, <a href="https://time.com/5565991/russia-influence-2016-election/" target="_blank">da flere russiske organisasjoner sine folk utga seg for å være amerikanere, og gikk inn i samtaler for å rette folk mot hverandre og polarisere folket</a>. I Internasjonale konflikter brukes også denne metoden 
 i form av propaganda. For eksempel russiske bots på Twitter, hvor intensjonen er å spre desinformasjon om invasjonen av Ukraina. Slike bots brukes også for å bidra til å skape større polarisering mellom de politiske motpartene i andre land. Dermed kan 
 stater ha politisk innflytelse innenfor andre landegrenser.
 
@@ -61,18 +61,18 @@ stater ha politisk innflytelse innenfor andre landegrenser.
           </h2>
           <p>
             Vi mener utviklere har et ansvar, og at man må se på det positive kontra det negative. Vi stiller oss spørsmålet; “Kan en oppfinnelse i seg selv være moralsk dårlig?” 
-Er det etisk korrekt å lage våpen, og har det noe å si om intensjonen er å beskytte, når konsekvensen er død. Noen vil si at fordi andre har våpen, så derfor må også vi ha det. 
-Da Alfred Nobel oppfant dynamitt, trodde han at all krig kom til å ende, men istedet ble det mye verre. Var han bare for optimistisk, eller skulle han ha visst bedre?
- <br>
- <br>
-Vi mener du som utvikler skal ha gode systemer på plass for å tenke over; «Hva vil vi oppnå?» og «Er dette den beste måten?». De aller fleste menneskeskapte oppfinnelser 
-kan brukes til skade, enten på individnivå eller på samfunnsnivå. Det kan være systematisk eller gjennom enkelthendelser. Skaden kan påføres både psykisk eller fysisk. Motivasjonen til de som benytter seg av den nye teknologien, vil kunne definere hvor stort det eventuelle skadeomfanget vil være. Derfor er dette noe en utvikler må ta hensyn til. Man har noe ansvar og må skape innenfor et rammeverk. Blir det annerledes enn hva du hadde tiltenkt kan det ha en mye verre konsekvens enn forventet. Du har et ansvar for å forhindre unødvendig misbruk og skade fra eget arbeid. 
-
+            Er det etisk korrekt å lage våpen, og har det noe å si om intensjonen er å beskytte, når konsekvensen er død. Noen vil si at fordi andre har våpen, så derfor må også vi ha det. 
+            <a href="https://www.nobelprize.org/alfred-nobel/alfred-nobels-thoughts-about-war-and-peace/" target="_blank">Da Alfred Nobel oppfant dynamitt, trodde han at all krig kom til å ende, men i stedet ble det mye verre</a>. Var han bare for optimistisk, eller skulle han ha visst bedre?
+            <br>
+            <br>
+            Vi mener du som utvikler skal ha gode systemer på plass for å tenke over; «Hva vil vi oppnå?» og «Er dette den beste måten?». De aller fleste menneskeskapte oppfinnelser 
+            kan brukes til skade, enten på individnivå eller på samfunnsnivå. Det kan være systematisk eller gjennom enkelthendelser. Skaden kan påføres både psykisk eller fysisk. 
+            Motivasjonen til de som benytter seg av den nye teknologien, vil kunne definere hvor stort det eventuelle skadeomfanget vil være. Derfor er dette noe en utvikler må ta hensyn til. Man har noe ansvar og må skape innenfor et rammeverk. Blir det annerledes enn hva du hadde tiltenkt kan det ha en mye verre konsekvens enn forventet. Du har et ansvar for å forhindre unødvendig misbruk og skade fra eget arbeid. 
           </p>
         </div>
 
         <div class="grid4">
-          <img src="/Side1/Images/test.jpeg" class="grid-img2" alt="grid2_img">
+          <img src="/Side4/Images/Alfred_Nobel.jpg" class="grid-img2" alt="grid2_img">
         </div>
         
       </div>
