--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -37,6 +37,7 @@
           </ul>
 
         </div>
+        
 
 <div class="grid">
 
@@ -44,15 +45,18 @@
         <h2>Vår Meny</h2>
     </div>
 
-    <div class="kolonne1"> 
-      <div class="fotograf">fotograf</div>
+
+    <div class="kolonne1">
         <div class="salat">
-        <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="">
+          <!--Bildet hentet fra: https://fiskesprell.no/oppskrifter/rekesalat/ -->
+          <img src="/Side3/Images/rekesalat_kokkesprell-2020.jpg" alt="Rekesalat" title="Foto: fiskesprell.no">
         </div>
         <div class="pizza">
-        <img  src="/Side3/Images/Margherita-bredde-1200x750.jpg" alt="">
+          <!--Bilde hentet fra: https://www.morshjemmebakte.no/recipes/margherita-pizza/ -->
+          <img  src="/Side3/Images/Margherita-bredde-1200x750.jpg" alt="Pizza Margherita" title="Foto: morshjemmebakte.no" >
         </div>
     </div>  
+
 
     <div class="foretter">
       <h2>Foretter:</h2>
@@ -66,9 +70,11 @@
           <i>Allergener: reker, sesamfrø</i></p>
     </div>
 
+
     <div class="kolonne2">
         <div class="pasta">
-        <img src="/Side3/Images/b4golm8sdghdq1vzivxz.webp" alt="">
+        <!--Bildet hentet fra: https://meny.no/oppskrifter/Pasta/klassisk-pasta-carbonara/ -->  
+        <img src="/Side3/Images/b4golm8sdghdq1vzivxz.webp" alt="Pasta Carbonara" title="Foto: meny.no">
         </div>
     </div>
   
@@ -81,23 +87,30 @@
         <p>Pasta Carbonara <strong>215 kr</strong> <br>
           <i>Allergener: Egg, Hvete, Melk</i></p>
           <hr>
-      <p>Pizza Margarita <strong>129 kr</strong> <br>
+      <p>Pizza Margherita <strong>129 kr</strong> <br>
           <i>Allergener: Hvete, Melk</i> </p>
     </div>
+
+
     <div class="kolonne3">
         <div class="vin">
-        <img src="/Side3/Images/vino-tintojpg.webp" alt="">
+        <!--Bildet hentet fra: https://descorcha.com/blog/propiedades-del-vino-tinto/ -->
+        <img src="/Side3/Images/vino-tintojpg.webp" alt="Vin" title="Foto: descorcha.com">
         </div>   
     </div>
 
+
     <div class="kolonne4">
         <div class="banansplit">
-        <img src="/Side3/Images/d7499de7-banansplit-.jpg" alt="">
+          <!--Bildet hentet fra: https://oppskrift.dagbladet.no/oppskrift/banansplit -->
+          <img src="/Side3/Images/d7499de7-banansplit-.jpg" alt="Banansplit" title="Foto: Synnøve Drejer">
         </div>
         <div class="brus">
-        <img src="/Side3/Images/glass-med-brus-illustrasjonsbilde-16-9.jpg" alt="">
+          <!--Bildet hentet fra: https://ryggestorsenter.no/butikker/varnaveien-mineralvann/ -->
+          <img src="/Side3/Images/glass-med-brus-illustrasjonsbilde-16-9.jpg" alt="Brus" title="Foto: ryggestorsenter.no">
         </div>
     </div>
+
 
     <div class="dessert">   
        <h2>Dessert:</h2>
