--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -52,7 +52,8 @@ stater ha politisk innflytelse innenfor andre landegrenser.
         </div>
 
         <div class="grid2">
-          <img src="/Side4/Images/Anti-vax.avif" class="grid-img1" alt="A demonstrator at the ‘No Mandatory Flu Shot Massachusetts’ rally in Boston last month © Boston Globe via Getty Images">
+          <!--Bilde hentet fra: -->
+          <img src="/Side4/Images/Anti-vax.avif" class="grid-img1" alt="A demonstrator at the ‘No Mandatory Flu Shot Massachusetts’ rally in Boston last month © Boston Globe via Getty Images" title="Foto: ">
         </div>
         
         <div class="grid3">
@@ -72,7 +73,8 @@ stater ha politisk innflytelse innenfor andre landegrenser.
         </div>
 
         <div class="grid4">
-          <img src="/Side4/Images/Alfred_Nobel.jpg" class="grid-img2" alt="grid2_img">
+          <!--Bilde hentet fra: -->
+          <img src="/Side4/Images/Alfred_Nobel.jpg" class="grid-img2" alt="grid2_img" title="Foto: ">
         </div>
         
       </div>
