--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -94,7 +94,7 @@
             </p>
           </div>
           <div class="Fest-Bilde">
-            <img src="/Side1/Images/test.jpeg" class="test4" alt="test-picture4">
+            <img src="/Side1/Images/Fest.jpeg" class="test4" alt="fest">
           </div>
       </div>
         
