--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -31,7 +31,7 @@
     </div>
    
     <div class="grid">
-        <div>
+        <div class="bilde">
             <!--Bildet hentet fra: https://en.wikipedia.org/wiki/Restaurant -->
             <img src="restaurant.jpg" alt="restaurant" title="Foto: Shopia i Washington D.C, USA">
         </div>
