--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -37,7 +37,7 @@
           </ul>
 
         </div>
-        
+
 
 <div class="grid">
 
@@ -148,9 +148,9 @@
 
   <div class="footer">
     <p id="kontaktinfo"> <b>Kontaktinfo</b><br>
-    <a href="mailto:vassjoselskapslokaler@gmail.no">E-post: vassjoselskapslokaler@gmail.no</a> <br>
+    E-post:<a href="mailto:vassjoselskapslokaler@gmail.no"> vassjoselskapslokaler@gmail.no</a> <br>
        Telefon: 12 34 56 78<br>
-       Adresse: Grindvollgata 556, 2720 Grindvoll
+       Adresse: <i>Grindvollgata 556, 2720 Grindvoll</i> 
     </p>
   </div>
   </footer>
