--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -63,10 +63,10 @@
         <p>Løkringer med valgfri dip <strong> 49kr</strong> <br>
           <i>Allergener: Hvete, løk </i></p>
           <hr>
-        <p>Klassisk bruschetta med tomater <strong> 99kr</strong> <br>
+        <p>Klassisk bruschetta m/tomater <strong> 99kr</strong> <br>
           <i>Allergener: Hvete, løk</i></p>
           <hr>
-        <p>Rekesalat med avokado og mango <strong> 99kr</strong> <br>
+        <p>Rekesalat m/avokado og mango <strong> 99kr</strong> <br>
           <i>Allergener: reker, sesamfrø</i></p>
     </div>
 
