--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -73,7 +73,7 @@
           <div class="Bryllups-Info">
               <p>
                 Våre lokaler er ypperlig om du og din utkårede skulle trenge et sted for å huse alle de nærmeste som har 
-                kommet for feire deres helt spesielle dag. ___________ kan ta opptil 80 personer, så du kan slippe dilemmaet om å velge hvem som 
+                kommet for feire deres helt spesielle dag. Vassjø Selskapslokaler kan ta opptil 80 personer, så du kan slippe dilemmaet om å velge hvem som 
                 får den siste invitasjonen. 
                 <br>
                 <br> 
