--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -47,7 +47,6 @@
           kan du og dine nærmeste nyte en herlig dag sammen! 
           Vi ønsker deg velkommen til café __________, hvor maten kun overgås av servicen! 
         </p>
-      
   
         <p id="p2">
           Caféens åpningstider finner du <a href="/Side3/HTML/Åpningstider.html">her</a>. Enten det skulle være et brullup, 
@@ -60,6 +59,7 @@
         <!--Bilde hentet fra: -->
         <img src="/Side1/Images/test.jpeg" class="test2" alt="test-picture2" title="Foto: ">
       </div>
+
   
       <div class="Booking-utvalg">
         
@@ -69,7 +69,7 @@
 
         <div class="Bryllups-mottakelse">
               <!--Bilde hentet fra: -->
-              <img src="/Side1/Images/Bryllup.jpeg" class="test3" alt="Bryllupsbilde" title="Foto: ">
+              <img src="/Side1/Images/Bryllup.jpeg" class="bryllup" alt="Bryllupsbilde" title="Foto: ">
           <div class="Bryllups-Info">
               <p>
                 Våre lokaler er ypperlig om du og din utkårede skulle trenge et sted for å huse alle de nærmeste som har 
@@ -95,7 +95,7 @@
           <div class="Fest-Bilde">
 
             <!--Bilde hentet fra: -->
-            <img src="/Side1/Images/Fest.jpeg" class="test4" alt="fest" title="Foto: ">
+            <img src="/Side1/Images/Fest.jpeg" class="fest" alt="fest" title="Foto: ">
 
           </div>
       </div>
@@ -103,7 +103,7 @@
         <div class="Konfirmasjonsfest">
           <div class="Konfirmasjons-Bilde">
             <!--Bilde hentet fra: -->
-            <img src="/Side1/Images/Konfirmasjon.jpeg" class="test5" alt="test-picture5" title="Foto: ">
+            <img src="/Side1/Images/Konfirmasjon.jpeg" class="konfirmasjon" alt="test-picture5" title="Foto: ">
           </div>
           <div class="Konfirmasjons-Info">
               <p> Det er en konfirmant i hus! Da kreves det en feiring av større dimensjoner. Konfirmanten kan samle både familie og venner i våre lokaler 
