--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -18,7 +18,6 @@
                Booking
               </h1>
             </div>
-
         </div>
     </header>
 
@@ -31,10 +30,12 @@
     </div>
    
     <div class="grid">
-        <div class="bilde">
+
+        <div class="bilde"> <!--Klassen blir brukt i Liten og Medium skjerm-->
             <!--Bildet hentet fra: https://en.wikipedia.org/wiki/Restaurant -->
             <img src="restaurant.jpg" alt="restaurant" title="Foto: Shopia i Washington D.C, USA">
         </div>
+
         <div class="info">
             <h2>Vassjø Selskapslokaler</h2>
             <p>Vassjø Selskapslokaler tilbyr flotte lokaler for ditt selskap. 
@@ -93,28 +94,31 @@
         <div class="Footer-info">
           
           <div class="Links">
-            
             <a href="/Side1/HTML/index.html">Forside</a>
             <a href="/Side3/HTML/Meny.html">Restaurant</a>
             <a href="/Side2/HTML/Booking.html">Booking</a>
           </div>
+
   
           <div class="Socials">
           <h2>
             Sosiale medier:
           </h2>
+
             <div class="Twitter">
               <a href="https://www.twitter.com" target="_blank">
                 <i class="fa-brands fa-twitter" id="twitter-logo"> <br> Twitter</i>  
               </a>
             </div>
             <br>
+
             <div class="Facebook">
               <a href="https://www.facebook.com" target="_blank">
                 <i class="fa-brands fa-facebook" id="facebook-logo"> <br> Facebook</i>
               </a>
             </div>
             <br>
+
            <div class="Instagram">
               <a href="https://www.instagram.com" target="_blank">
                 <i class="fa-brands fa-instagram" id="instagram-logo"> <br> Instagram</i>
@@ -124,7 +128,7 @@
   
           <div class="kart">
               <!--Kopiert kode lenke fra google maps-->
-              <h2>Lokasjon</h2>
+            <h2>Lokasjon</h2>
               <p>Vi er lokalisert ved Vassjø <br>
                   <address>Grindvollgata 556 <br> 2720 Grindvoll</address></p>
                   <iframe id="adresse-kart" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.4148189642474!2d10.484187997680344!3d60.293100208888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4641a5badd7d4727%3A0xa54e046b92b5a4af!2sGrindvollgata%2C%202720%20Grindvoll!5e0!3m2!1sno!2sno!4v1669971338626!5m2!1sno!2sno"></iframe>
