--- a/Side3/HTML/Meny.html
+++ b/Side3/HTML/Meny.html
@@ -25,6 +25,7 @@
           <ul>
             <li> <a href="/Side1/HTML/index.html">Velkommen</a> </li>
             <li> <a href="/Side2/HTML/Booking.html">Booking</a> </li>
+            <!--Dropdown meny fra restrant knappen-->
             <li> <div class="dropdown">
               <button class="dropbtn">Restaurant</button>
               <div class="dropdown-content">
@@ -41,7 +42,7 @@
 
 <div class="grid">
 
-    <div class="meny" id="Meny"> 
+    <div class="meny"> 
         <h2>Vår Meny</h2>
     </div>
 
