--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -69,7 +69,7 @@
 
         <div class="Bryllups-mottakelse">
               <!--Bilde hentet fra: -->
-              <img src="/Side1/Images/Bryllup.jpeg" class="test3" alt="Bryllupsbilde" title="Foto: ">
+              <img src="/Side1/Images/Bryllup.jpeg" class="test3" alt="Bryllupsbilde" title="Foto: Fotografene Storm Leth / www.stormleth.no  ">
           <div class="Bryllups-Info">
               <p>
                 Våre lokaler er ypperlig om du og din utkårede skulle trenge et sted for å huse alle de nærmeste som har 
@@ -95,7 +95,7 @@
           <div class="Fest-Bilde">
 
             <!--Bilde hentet fra: -->
-            <img src="/Side1/Images/Fest.jpeg" class="test4" alt="fest" title="Foto: ">
+            <img src="/Side1/Images/Fest.jpeg" class="test4" alt="fest" title="Foto: cottonbro studio, pexels.com ">
 
           </div>
       </div>
