--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -32,7 +32,7 @@
   <section class="DATA1100">
     
       <div class="container">
-        <div class="grid1">
+        <div class="topictext1">
           <h2>
             To which extent and how does the internet have political consequences?	
           </h2>
@@ -51,12 +51,12 @@ stater ha politisk innflytelse innenfor andre landegrenser.
           </p>
         </div>
 
-        <div class="grid2">
+        <div class="topiclink">
           <!--Bilde hentet fra: -->
           <img src="/Side4/Images/Anti-vax.avif" class="grid-img1" alt="A demonstrator at the ‘No Mandatory Flu Shot Massachusetts’ rally in Boston last month © Boston Globe via Getty Images" title="Foto: ">
         </div>
         
-        <div class="grid3">
+        <div class="topictext2">
           <h2>
             What are your thoughts about the societal responsibility of innovators?
           </h2>
@@ -72,7 +72,7 @@ stater ha politisk innflytelse innenfor andre landegrenser.
           </p>
         </div>
 
-        <div class="grid4">
+        <div class="topicbilde">
           <!--Bilde hentet fra: -->
           <img src="/Side4/Images/Alfred_Nobel.jpg" class="grid-img2" alt="grid2_img" title="Foto: ">
         </div>
