--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -12,7 +12,7 @@
 
   <header>
 
-    <div class="Header-Image">
+    <div class="Header-Image" title="Foto: Puscau Daniel Florin via Pexels.com" alt="Nature_lake">
       <div class="Main-Title">
         <h1>
           Vassjø Selskapslokaler
