--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="Header-Image">
+        <div class="Header-Image" title="Foto: Puscau Daniel Florin via Pexels.com" alt="Nature_lake">
 
             <div class="Main-Title">
               <h1>
