--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -24,7 +24,7 @@
     <div class="navbar">
         <a href="/Side1/HTML/index.html">Velkommen</a>
         <a href="/Side2/HTML/Booking.html">Booking</a>
-        <a href="/Side3/HTML/Meny.html">Meny</a>
+        <a href="/Side3/HTML/Meny.html">Restaurant</a>
         <a href="/Side4/HTML/fil.html">Topical page</a>
         <a href="/Side5/HTML/fil.html">Accessibility page</a>
     </div>
@@ -120,7 +120,7 @@
             <br>
 
            <div class="Instagram">
-              <a href="https://www.instagram.com" target="_blank">
+              <a href="https:/  ww.instagram.com" target="_blank">
                 <i class="fa-brands fa-instagram" id="instagram-logo"> <br> Instagram</i>
               </a>
             </div>
