--- a/Side3/HTML/Åpningstider.html
+++ b/Side3/HTML/Åpningstider.html
@@ -27,13 +27,13 @@
     <div class="åpningstider">
 
         <h2>
-        Åpningstider:
+        Åpningstider
         </h2>
 
         <p>
-            <strong>Mandag - Fredag:</strong> 10:00-16:00 <br>
-            <strong>Lørdag:</strong> 10:00-17:00 <br>
-            <strong>Søndag:</strong> Stengt
+            <strong>Mandag - Fredag:</strong> <br> 10:00-16:00 <br>
+            <strong>Lørdag:</strong> <br> 10:00-17:00 <br>
+            <strong>Søndag:</strong> <br> Stengt
         </p>
     </div>
     
