--- a/Side5/HTML/fil.html
+++ b/Side5/HTML/fil.html
@@ -12,7 +12,7 @@
   
   <header>
 
-    <div class="Header-Image">
+    <div class="Header-Image" title="Foto: Puscau Daniel Florin via Pexels.com" alt="Nature_lake">
       <div class="Tittel">
         <h1>
           Testing av kode
