--- a/Side2/HTML/Booking.html
+++ b/Side2/HTML/Booking.html
@@ -33,7 +33,7 @@
 
         <div class="bilde"> <!--Klassen blir brukt i Liten og Medium skjerm-->
             <!--Bildet hentet fra: https://en.wikipedia.org/wiki/Restaurant -->
-            <img src="restaurant.jpg" alt="restaurant" title="Foto: Shopia i Washington D.C, USA">
+            <img src="restaurant.jpg" alt="restaurant" title="Foto: Sophia i Washington D.C, USA">
         </div>
 
         <div class="info">
