--- a/Side4/HTML/fil.html
+++ b/Side4/HTML/fil.html
@@ -53,7 +53,7 @@ stater ha politisk innflytelse innenfor andre landegrenser.
 
         <div class="topicbilde1">
           <!--Bilde hentet fra: -->
-          <img src="/Side4/Images/Anti-vax.jpg" class="topic-img1" alt="Anti_vax_demonstrator" title="Foto: Boston Globe via Getty Images">
+          <img src="/Side4/Images/Anti-vax.png" class="topic-img1" alt="Anti_vax_demonstrator" title="Foto: Boston Globe via Getty Images">
         </div>
         
         <div class="topictext2">
