--- a/Side1/HTML/index.html
+++ b/Side1/HTML/index.html
@@ -96,7 +96,7 @@
           <div class="Fest-Bilde">
 
             <!--Bilde hentet fra: -->
-            <img src="/Side1/Images/Fest.jpeg" class="fest" alt="fest" title="Foto: cottonbro studio, pexels.com ">
+            <img src="/Side1/Images/Fest.jpeg" class="fest" alt="fest" title="Foto: cottonbro studio via pexels.com">
 
           </div>
       </div>
@@ -104,7 +104,7 @@
         <div class="Konfirmasjonsfest">
           <div class="Konfirmasjons-Bilde">
             <!--Bilde hentet fra: -->
-            <img src="/Side1/Images/Konfirmasjon.jpeg" class="konfirmasjon" alt="test-picture5" title="Foto: ">
+            <img src="/Side1/Images/Konfirmasjon.jpeg" class="konfirmasjon" alt="Konfirmasjon" title="Foto: Bjørndal Gård via 180.no">
           </div>
           <div class="Konfirmasjons-Info">
               <p> Det er en konfirmant i hus! Da kreves det en feiring av større dimensjoner. Konfirmanten kan samle både familie og venner i våre lokaler 
